--- a/gui/css/vga.css
+++ b/gui/css/vga.css
@@ -1,4 +1,11 @@
+.vga {
+	border-spacing: 0;
+}
+
 .vga td {
-	width: 16px;
+	width: 8px;
 	height: 16px;
+
+	font-family: monospace;
+	font-size: 16px;
 }
